Initial commit: Complete authentication system with responsive design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- Header -->
             <div class="header">
                 <div class="logo-container">
-                    <img src="photo_5805347787967761589_x.jpeg" alt="Loctech IT Training Institute" class="loctech-logo">
+                    <img src="photo1.jpeg" alt="Loctech IT Training Institute" class="loctech-logo">
                 </div>
             </div>
 
@@ -187,7 +187,7 @@
         <div class="dashboard-header">
             <div class="header-content">
                 <div class="logo-section">
-                    <img src="photo_5805347787967761589_x.jpeg" alt="Loctech IT Training Institute" class="loctech-logo dashboard-logo">
+                    <img src="photo1.jpeg" alt="Loctech IT Training Institute" class="loctech-logo dashboard-logo">
                 </div>
                 <div class="menu-container">
                     <button class="mobile-menu-btn" id="mobileMenuBtn">
