Initial commit: Complete authentication system with responsive design

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <a href="#" class="social-link">💼</a>
                 <a href="#" class="social-link">📺</a>
             </div>
-            <p class="copyright">© 2024 Built by Aspirants Team. All rights reserved.</p>
+            <p class="copyright">© 2025 All rights reserved.</p>
         </div>
     </div>
 
